# statum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  REWRITE_PLAN.md  SECURITY.md  deny.toml  expanded.rs  longer.rs
cargo-statum/: Cargo.toml
cargo-statum-graph/: Cargo.toml  README.md
cargo-statum-graph/src/: heuristics.rs  inspect.rs  journeys.rs  lib.rs  main.rs  suggestions.rs
cargo-statum-graph/tests/: cli.rs  public_api.rs
cargo-statum/src/: main.rs
cargo-statum/tests/: graph_cli.rs
docs/: README.md  (+39 more)
macro_registry/: Cargo.toml  README.md
macro_registry/src/: analysis.rs  cache.rs  callsite.rs  lib.rs  query.rs  registry.rs
macro_registry/tests/: lookup_contract.rs
module_path_extractor/: Cargo.toml  README.md
module_path_extractor/src/: cache.rs  lib.rs  parser.rs  pathing.rs
statum/: Cargo.toml  README.md
statum-core/: Cargo.toml  README.md  build.rs
statum-core/src/: introspection.rs  lib.rs  projection.rs
statum-core/src/introspection/: graph.rs  inventory.rs  mod.rs  presentation.rs  recording.rs  stable_metadata.rs  traits.rs
statum-core/src/testing/: graph.rs  mod.rs  rehydrate.rs  walks.rs
statum-core/tests/: stable_graph_metadata.rs
statum-examples/: Cargo.toml  README.md
statum-examples/src/: lib.rs
statum-examples/src/examples/: 03-derives.rs  04-transitions.rs  06-async-transitions.rs  07-state-data.rs  09-persistent-data.rs  10-persistent-data-vecs.rs  11-hierarchical-machines.rs  12-rollbacks.rs  13-review-flow.rs  example_01_setup.rs  mod.rs
statum-examples/src/showcases/: axum_sqlite_review.rs  clap_sqlite_deploy_pipeline.rs  mod.rs  serde_json_snapshot.rs  sqlite_event_log_rebuild.rs  tokio_sqlite_job_runner.rs  tokio_websocket_session.rs
statum-examples/src/toy_demos/: 02-machine-context.rs  03-derives.rs  05-split-transition.rs  08-transition-with-data.rs  09-persistent-data.rs  10-persistent-data-vecs.rs  11-hierarchical-machines.rs  12-rollbacks.rs  14-batch-machine-fields.rs  15-transition-map.rs  16-machine-introspection.rs  17-attested-composition.rs  example_18_composition_machine.rs  mod.rs
statum-examples/tests/: examples.rs  patterns.rs  showcases.rs  stress.rs  toy_demos.rs
statum-graph/: Cargo.toml  README.md
statum-graph/src/: export.rs  lib.rs  render.rs
statum-graph/src/codebase/: mod.rs  render.rs
statum-graph/tests/: codebase.rs  codebase_ambiguity.rs  codebase_attested_relations.rs  codebase_attested_route_ambiguity.rs  codebase_attested_route_grouping.rs  codebase_detached_handoffs.rs  codebase_reexported_machine_targets.rs  codebase_relations.rs  codebase_validators.rs  export.rs
statum-graph/tests/snapshots/: codebase__linked_codebase_dot.snap  codebase__linked_codebase_json.snap  codebase__linked_codebase_mermaid.snap  codebase__linked_codebase_plantuml.snap  export__branching_flow_dot.snap  export__branching_flow_mermaid.snap  export__branching_flow_plantuml.snap  export__presented_flow_json.snap
statum-macros/: ARCHITECTURE.md  Cargo.toml  README.md  db_integration.md  expanded.rs
statum-macros/src/: analysis.rs  cache.rs  callsite.rs  contracts.rs  diagnostics.rs  journeys.rs  lib.rs  machine.rs  machine_ref.rs  module_path.rs  parser.rs  pathing.rs  presentation.rs  query.rs  relation.rs  source_cache.rs  state.rs  syntax.rs  transition.rs  validators.rs
statum-macros/src/machine/: child.rs  emission.rs  generics.rs  introspection.rs  metadata.rs  mod.rs  registry.rs  validation.rs
statum-macros/src/source/: aliases.rs  analysis.rs  cache.rs  callsite.rs  diagnostics_query.rs  mod.rs  module_path.rs  parser.rs  query.rs  scan.rs  syntax.rs
statum-macros/src/state/: emission.rs  mod.rs  registry.rs  validation.rs
statum-macros/src/transition/: contract.rs  diagnostics.rs  emit.rs  parse.rs  pipeline.rs  resolve.rs  validation.rs
statum-macros/src/validators/: contract.rs  emission.rs  plan.rs  resolution.rs  signatures.rs  type_equivalence.rs
statum-macros/tests/: child_interplay_ui.rs  macro_errors.rs
statum-macros/tests/ui/: README.md  invalid_build_missing_source_surface.rs  invalid_build_missing_source_surface.stderr  invalid_builder_missing_machine_field.rs  invalid_builder_missing_machine_field.stderr  invalid_builder_missing_state_data.rs  invalid_builder_missing_state_data.stderr  invalid_child_wrapper_multiple_fields.rs  invalid_child_wrapper_multiple_fields.stderr  invalid_child_wrapper_outside_module.rs  invalid_child_wrapper_outside_module.stderr  invalid_child_wrapper_tuple_struct.rs  invalid_child_wrapper_tuple_struct.stderr  invalid_default_introspection_surface.rs  invalid_default_introspection_surface.stderr  invalid_journeys_adjacent_bridges.rs  invalid_journeys_adjacent_bridges.stderr  invalid_journeys_bridge_entry.rs  invalid_journeys_bridge_entry.stderr  invalid_legacy_machine_builder.rs  invalid_legacy_machine_builder.stderr  invalid_legacy_machines_builder.rs  invalid_legacy_machines_builder.stderr  invalid_legacy_state_helper_traits.rs  invalid_legacy_state_helper_traits.stderr  invalid_legacy_superstate.rs  invalid_legacy_superstate.stderr  invalid_legacy_transition_helper_trait.rs  invalid_legacy_transition_helper_trait.stderr  invalid_machine_builder_duplicate_field.rs  invalid_machine_builder_duplicate_field.stderr  invalid_machine_builder_duplicate_state_data.rs  (+233 more)
statum-typestate/: Cargo.toml  README.md
statum-typestate/src/: lib.rs
statum-typestate/tests/: typestate_only.rs
statum/benches/: runtime.rs
statum/examples/: 01-setup.rs  02-machine-context.rs  03-derives.rs  04-transitions.rs  05-split-transition.rs  06-async-transitions.rs  06-state-data.rs  07-state-data.rs  07-transition-with-data.rs  08-persistent-data.rs  08-transition-with-data.rs  09-persistent-data-vecs.rs  09-persistent-data.rs  10-persistent-data-vecs.rs  11-hierarchical-machines.rs  12-rollbacks.rs  expanded.rs
statum/src/: lib.rs
statum/tests/: branch_wrapper.rs  core_only.rs  ergonomic_construction.rs  introspection.rs  introspection_authority.rs  named_state_variants.rs  rebuild_reports.rs
(+183 files in other folders)
