[workspace]
resolver = "2"
members = ["statum-core", "statum-macros", "statum", "statum-examples"]

[workspace.dependencies]
statum = { path = "statum" }

[workspace.metadata.scripts]
version-bump = "cargo script scripts/update_version.rs -- 1.0.0"
publish = "cargo script scripts/publish.rs"
publish-dry-run = "bash scripts/check_publish_dry_run.sh"
