[workspace]
members = [
    "statum",
    "statum-core",
    "statum-macros",
    "statum-examples",
    "cargo-statum",
]
exclude = [
    "benchmarks/compile/plain-fixture",
    "benchmarks/compile/statum-fixture",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
clap = "4.5"
criterion = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
linkme = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1"
serde_json = "1"
syn = "2.0"
tokio = "1"
tower = "0.5"
trybuild = "1.0"

[workspace.dependencies.sqlx]
default-features = false
version = "0.8"

[workspace.dependencies.statum]
path = "statum"
version = "0.9.0"

[workspace.dependencies.statum-core]
path = "statum-core"
version = "0.9.0"

[workspace.dependencies.statum-macros]
path = "statum-macros"
version = "0.9.0"

[workspace.metadata.scripts]
benchmark-compile = "bash scripts/benchmark_compile.sh"
benchmark-runtime = "cargo bench -p statum --bench runtime"
publish = "cargo script scripts/publish.rs"
publish-dry-run = "bash scripts/check_publish_dry_run.sh"
version-bump = "cargo script scripts/update_version.rs -- 1.0.0"
workspace-hygiene = "bash scripts/check_workspace_hygiene.sh"

[workspace.package]
authors = ["Eran Boodnero <eran@eran.codes>"]
license = "MIT"
repository = "https://github.com/eboody/statum"
rust-version = "1.93"
version = "0.9.0"
