[dependencies.module_path_extractor]
path = "../module_path_extractor"
version = "0.4.0"

[dependencies.syn]
features = ["full"]
version = "2.0"

[package]
authors = ["Eran Boodnero <eran@eran.codes>"]
categories = [
    "development-tools::procedural-macro-helpers",
    "rust-patterns",
]
description = "Reusable proc-macro registry and source analysis infrastructure"
documentation = "https://docs.rs/macro_registry"
edition = "2021"
keywords = [
    "proc-macro",
    "registry",
    "syn",
    "ast",
    "codegen",
]
license = "MIT"
name = "macro_registry"
readme = "README.md"
repository = "https://github.com/eboody/statum"
rust-version = "1.93"
version = "0.4.0"
