[dependencies.proc-macro2]
features = ["span-locations"]
version = "1"

[dependencies.syn]
features = ["full"]
version = "2.0"

[lib]
path = "src/lib.rs"

[package]
description = "Derive a Rust module path from a macro call-site span"
documentation = "https://docs.rs/module_path_extractor"
edition = "2021"
license = "MIT"
name = "module_path_extractor"
readme = "README.md"
repository = "https://github.com/eboody/statum"
rust-version = "1.93"
version = "0.5.3"
