[dependencies]

[package]
authors = ["Eran Boodnero <eran@eran.codes>"]
categories = ["rust-patterns"]
description = "Core types for representing legal workflow and protocol states explicitly in Rust"
documentation = "https://docs.rs/statum-core"
edition = "2021"
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "state-machine",
]
license = "MIT"
name = "statum-core"
readme = "README.md"
repository = "https://github.com/eboody/statum"
rust-version = "1.93"
version = "0.6.1"

[package.metadata.modum]
weak_modules = [
    "storage",
    "transport",
    "infra",
    "common",
    "misc",
    "helpers",
    "helper",
    "types",
    "util",
    "utils",
    "projection",
    "can",
]
