[dependencies]
futures.workspace = true
linkme.workspace = true

[package]
authors.workspace = true
categories = ["rust-patterns"]
description = "Core types for representing legal workflow and protocol states explicitly in Rust"
documentation = "https://docs.rs/statum-core"
edition = "2021"
include = ["/src/**", "/README.md", "/LICENSE"]
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "state-machine",
]
license.workspace = true
name = "statum-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.modum]
weak_modules = [
    "storage",
    "transport",
    "infra",
    "common",
    "misc",
    "helpers",
    "helper",
    "types",
    "util",
    "utils",
    "projection",
    "can",
]
