[dependencies]
axum = "0.8"
bon = "3.9.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tower = { version = "0.5", features = ["util"] }

[dependencies.statum]
path = "../statum"
version = "0.4.0"

[dependencies.tokio]
features = ["full"]
version = "1"

[package]
edition = "2024"
license = "MIT"
name = "statum-examples"
rust-version = "1.93"
version = "0.4.0"
