[dependencies]
axum = "0.8"
bon = "3.9.0"
futures = "0.3"
serde_json = "1"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
]
version = "0.8"

[dependencies.statum]
path = "../statum"
version = "0.5.4"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.tower]
features = ["util"]
version = "0.5"

[package]
edition = "2024"
license = "MIT"
name = "statum-examples"
publish = false
rust-version = "1.93"
version = "0.5.4"
