[dependencies]
axum.workspace = true
serde_json.workspace = true

[dependencies.clap]
workspace = true
features = ["derive"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.sqlx]
workspace = true
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
]

[dependencies.statum]
workspace = true
features = ["rebuild-batch", "rebuild-reports"]

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.tower]
workspace = true
features = ["util"]

[package]
authors.workspace = true
edition = "2024"
license.workspace = true
name = "statum-examples"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.modum]
weak_modules = [
    "deployment",
    "job",
    "order",
    "session",
]
