[dependencies]
quote = "1.0"

[dependencies.macro_registry]
path = "../macro_registry"
version = "0.6.9"

[dependencies.moddef]
version = "0.2.6"

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0"

[dependencies.syn]
features = [
    "full",
    "visit-mut",
    "visit",
]
version = "2.0"

[dev-dependencies]
futures = "0.3"
trybuild = "1.0"

[dev-dependencies.statum-core]
path = "../statum-core"
version = "0.6.9"

[features]
default = []

[lib]
proc-macro = true

[package]
authors = ["Eran Boodnero <eran@eran.codes>"]
categories = ["rust-patterns"]
description = "Proc macros for representing legal workflow and protocol states explicitly in Rust"
documentation = "https://docs.rs/statum-macros"
edition = "2024"
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "proc-macro",
]
license = "MIT"
name = "statum-macros"
readme = "README.md"
repository = "https://github.com/eboody/statum"
rust-version = "1.93"
version = "0.6.9"
