[dependencies]
quote.workspace = true

[dependencies.moddef]
workspace = true

[dependencies.proc-macro2]
workspace = true
features = ["span-locations"]

[dependencies.syn]
workspace = true
features = [
    "full",
    "visit-mut",
    "visit",
]

[dev-dependencies]
futures.workspace = true
trybuild.workspace = true

[dev-dependencies.statum-core]
workspace = true

[features]
default = []
strict-introspection = []

[lib]
proc-macro = true

[package]
authors.workspace = true
categories = ["rust-patterns"]
description = "Proc macros for representing legal workflow and protocol states explicitly in Rust"
documentation = "https://docs.rs/statum-macros"
edition = "2024"
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "proc-macro",
]
license.workspace = true
name = "statum-macros"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
