[dependencies]
quote.workspace = true

[dependencies.proc-macro2]
workspace = true
features = ["span-locations"]

[dependencies.syn]
workspace = true
features = [
    "full",
    "visit-mut",
]

[dev-dependencies]
trybuild.workspace = true

[dev-dependencies.statum-core]
features = ["introspection"]
workspace = true

[features]
default = []
introspection = []
rebuild-batch = []
rebuild-reports = []
strict-introspection = ["introspection"]

[lib]
proc-macro = true

[package]
authors.workspace = true
categories = ["rust-patterns"]
description = "Proc macros for representing legal workflow and protocol states explicitly in Rust"
documentation = "https://docs.rs/statum-macros"
edition = "2024"
include = ["/src/**", "/README.md", "/LICENSE"]
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "proc-macro",
]
license.workspace = true
name = "statum-macros"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
