[dependencies.statum-core]
path = "../statum-core"
version = "0.6.8"

[dependencies.statum-macros]
path = "../statum-macros"
version = "0.6.8"

[dev-dependencies.tokio]
features = ["full"]
version = "1"

[package]
authors = ["Eran Boodnero <eran@eran.codes>"]
categories = ["rust-patterns"]
description = "Represent workflow and protocol state correctly in Rust by making invalid states unrepresentable"
documentation = "https://docs.rs/statum"
edition = "2021"
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "state-machine",
]
license = "MIT"
name = "statum"
readme = "README.md"
repository = "https://github.com/eboody/statum"
rust-version = "1.93"
version = "0.6.8"

[package.metadata.modum]
generic_nouns = [
    "Id",
    "Repository",
    "Service",
    "Command",
    "Request",
    "Response",
]
weak_modules = ["can"]
