[dependencies.statum-core]
workspace = true

[dependencies.statum-macros]
workspace = true

[features]
default = []
rebuild-batch = ["statum-macros/rebuild-batch"]
rebuild-reports = ["statum-macros/rebuild-reports"]
strict-introspection = ["statum-macros/strict-introspection"]

[dev-dependencies.tokio]
workspace = true
features = ["full"]

[dev-dependencies.criterion]
workspace = true

[[bench]]
name = "runtime"
harness = false

[package]
authors.workspace = true
categories = ["rust-patterns"]
description = "Represent workflow and protocol state correctly in Rust by making invalid states unrepresentable"
documentation = "https://docs.rs/statum"
edition = "2021"
include = ["/src/**", "/README.md", "/LICENSE"]
keywords = [
    "typestate",
    "correctness",
    "workflow",
    "protocol",
    "state-machine",
]
license.workspace = true
name = "statum"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.modum]
generic_nouns = [
    "Id",
    "Repository",
    "Service",
    "Command",
    "Request",
    "Response",
]
weak_modules = ["can"]
